Modified line-height and fixed spacing of home post top title.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -83,7 +83,7 @@ td {
 #content {
   font-family:"Berlin Sans FB";
   color: #FFFFFF;
-  line-height: 150%;
+  line-height: 200%;
 }
 .center {
   text-align:center;
